examples/c/tests/data/incomplete_call.tree
translation_unit [0..20]
    function_definition [0..19]
        declaration_specifiers [0..4]
            type_specifier [0..4]
                Void "void" [0..4]
        Whitespace " " [4..5]
        declarator [5..8]
            function_declarator [5..8]
                ident_declarator [5..6]
                    Identifier "f" [5..6]
                LPar "(" [6..7]
                RPar ")" [7..8]
        Whitespace " " [8..9]
        compound_statement [9..19]
            LBrace "{" [9..10]
            Whitespace "\n  " [10..13]
            expression_statement [13..17]
                call_expr [13..17]
                    ident_expr [13..14]
                        Identifier "g" [13..14]
                    LPar "(" [14..15]
                    argument_expression_list [15..17]
                        int_expr [15..16]
                            IntConst "1" [15..16]
                        Comma "," [16..17]
            Whitespace "\n" [17..18]
            RBrace "}" [18..19]
    Whitespace "\n" [19..20]
